--- a/homeworks/HW5/HW5-Final.ipynb
+++ b/homeworks/HW5/HW5-Final.ipynb
@@ -185,6 +185,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "R=8.314\n",
+    "def const(k):\n",
+    "    return k\n",
+    "\n",
+    "def arr(A, E, T):\n",
+    "        #Check that A,T,E  are numbers\n",
+    "        if ((type(A) != int and type(A) != float) or \n",
+    "            (type(b) != int and type(b) != float) or\n",
+    "            (type(E) != int and type(E) != float)):\n",
+    "            raise TypeError(\"All arguments must be numbers!\")\n",
+    "            \n",
+    "        elif (T<0 or A<0): # A & T must be positive\n",
+    "            raise ValueError(\"Temperature and Arrhenius prefactor must be positive!\")\n",
+    "            \n",
+    "        else:\n",
+    "            #Calculate karr\n",
+    "            karr = A*(np.exp(-E/(R*T)))\n",
+    "            return karr\n",
+    "        \n",
+    "def mod_arr(A,E,b,T):\n",
+    "            #Check that A,T,E  are numbers\n",
+    "        if ((type(A) != int and type(A) != float) or \n",
+    "            (type(b) != int and type(b) != float) or\n",
+    "            (type(E) != int and type(E) != float)):\n",
+    "            raise TypeError(\"All arguments must be numbers!\")\n",
+    "            \n",
+    "        elif (T<0 or A<0): # A & T must be positive\n",
+    "            raise ValueError(\"Temperature and Arrhenius prefactor must be positive!\")\n",
+    "            \n",
+    "        else:\n",
+    "            #Calculate karr\n",
+    "            karr = A*(T**b)*(np.exp(-E/(R*T)))\n",
+    "            return karr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# write some tests\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
