--- a/homeworks/HW5/HW5-Final.ipynb
+++ b/homeworks/HW5/HW5-Final.ipynb
@@ -187,11 +187,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting reaction_coeffs.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%file reaction_coeffs.py\n",
     "import numpy as np\n",
     "R=8.314\n",
     "def const(k):\n",
@@ -200,7 +207,7 @@
     "def arr(A, E, T):\n",
     "        #Check that A,T,E  are numbers\n",
     "        if ((type(A) != int and type(A) != float) or \n",
-    "            (type(b) != int and type(b) != float) or\n",
+    "            (type(T) != int and type(T) != float) or\n",
     "            (type(E) != int and type(E) != float)):\n",
     "            raise TypeError(\"All arguments must be numbers!\")\n",
     "            \n",
@@ -216,7 +223,8 @@
     "            #Check that A,T,E  are numbers\n",
     "        if ((type(A) != int and type(A) != float) or \n",
     "            (type(b) != int and type(b) != float) or\n",
-    "            (type(E) != int and type(E) != float)):\n",
+    "            (type(E) != int and type(E) != float) or\n",
+    "            (type(T) != int and type(T) != float)):\n",
     "            raise TypeError(\"All arguments must be numbers!\")\n",
     "            \n",
     "        elif (T<0 or A<0): # A & T must be positive\n",
@@ -230,13 +238,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting kinetics.py\n"
+     ]
+    }
+   ],
    "source": [
-    "# write some tests\n"
+    "%%file kinetics.py\n",
+    "import reaction_coeffs\n",
+    "\n",
+    "# Time to use a reaction rate coefficient:\n",
+    "reaction_coeffs.const(107)\n",
+    "reaction_coeffs.arr(107,103,102)\n",
+    "reaction_coeffs.mod_arr(107,103,0.5,102)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting kinetics_tests.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file kinetics_tests.py\n",
+    "import reaction_coeffs\n",
+    "#Test k_const\n",
+    "def test_const():\n",
+    "    assert reaction_coeffs.const(107) == 107\n",
+    "    \n",
+    "#Test k_arr\n",
+    "def test_arr():\n",
+    "    assert reaction_coeffs.arr(107,103,102) == 94.762198593430469\n",
+    "\n",
+    "def test_arr_values1():\n",
+    "    try:\n",
+    "        reaction_coeffs.arr(-1,103,102)\n",
+    "    except ValueError as err:\n",
+    "        assert(type(err) == ValueError)\n",
+    "        \n",
+    "def test_arr_values2():\n",
+    "    try:\n",
+    "        reaction_coeffs.arr(107,103,-2)\n",
+    "    except ValueError as err:\n",
+    "        assert(type(err) == ValueError)\n",
+    "\n",
+    "def test_arr_types1():\n",
+    "    try:\n",
+    "        reaction_coeffs.arr('107',103,102)\n",
+    "    except TypeError as err:\n",
+    "        assert(type(err) == TypeError)\n",
+    "        \n",
+    "def test_arr_types2():\n",
+    "    try:\n",
+    "        reaction_coeffs.arr(107,'103',102)\n",
+    "    except TypeError as err:\n",
+    "        assert(type(err) == TypeError)\n",
+    "\n",
+    "def test_arr_types3():\n",
+    "    try:\n",
+    "        reaction_coeffs.arr(107,103,[102])\n",
+    "    except TypeError as err:\n",
+    "        assert(type(err) == TypeError)  \n",
+    "        \n",
+    "#Test mod_arr\n",
+    "def test_mod_arr():\n",
+    "    assert reaction_coeffs.mod_arr(107,103,0.5,102) == 957.05129266439894\n",
+    "    \n",
+    "def test_mod_arr_values1():\n",
+    "    try:\n",
+    "        reaction_coeffs.mod_arr(-1,103,0.5,102)\n",
+    "    except ValueError as err:\n",
+    "        assert(type(err) == ValueError)\n",
+    "\n",
+    "def test_mod_arr_values2():\n",
+    "    try:\n",
+    "        reaction_coeffs.mod_arr(107,103,0.5,-2)\n",
+    "    except ValueError as err:\n",
+    "        assert(type(err) == ValueError)\n",
+    "        \n",
+    "def test_mod_arr_types1():\n",
+    "    try:\n",
+    "        reaction_coeffs.mod_arr('107',103,0.5,102)\n",
+    "    except TypeError as err:\n",
+    "        assert(type(err) == TypeError)\n",
+    "        \n",
+    "def test_mod_arr_types2():\n",
+    "    try:\n",
+    "        reaction_coeffs.mod_arr(107,'103',0.5,102)\n",
+    "    except TypeError as err:\n",
+    "        assert(type(err) == TypeError)\n",
+    "\n",
+    "def test_mod_arr_types3():\n",
+    "    try:\n",
+    "        reaction_coeffs.mod_arr(107,103,[0.5],102)\n",
+    "    except TypeError as err:\n",
+    "        assert(type(err) == TypeError)\n",
+    "\n",
+    "def test_mod_arr_types4():\n",
+    "    try:\n",
+    "        reaction_coeffs.mod_arr(107,103,0.5,False)\n",
+    "    except TypeError as err:\n",
+    "        assert(type(err) == TypeError)\n",
+    "    \n",
+    "\n",
+    "test_const()\n",
+    "test_mod_arr()\n",
+    "test_arr()\n",
+    "test_arr_values1()\n",
+    "test_arr_values2()\n",
+    "test_arr_types1()\n",
+    "test_arr_types2()\n",
+    "test_arr_types3()\n",
+    "test_mod_arr_values1()\n",
+    "test_mod_arr_values2()\n",
+    "test_mod_arr_types1()\n",
+    "test_mod_arr_types2()\n",
+    "test_mod_arr_types3()\n",
+    "test_mod_arr_types4()"
    ]
   },
   {
@@ -280,6 +411,73 @@
     "\\end{align}\n",
     "\n",
     "You must document your function and write some tests in addition to the one suggested.  You choose the additional tests, but you must have at least one doctest in addition to a suite of unit tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def progress_rate(v1,x,k):\n",
+    "    #Check that x and v1 are lists\n",
+    "    if (type(v1) != list or type(x) != list):\n",
+    "        raise TypeError(\"v' & x must be passed in as a list\")\n",
+    "    #Check that x,and k are numbers/list of numbers\n",
+    "    if (any(type(i) != int and type(i) != float for i in x)):\n",
+    "        raise TypeError(\"All elements in x must be numbers!\")\n",
+    "    elif (type(k) != int and type(k) != float and type(k) != list):\n",
+    "        raise TypeError(\"k must be a numbers!\")\n",
+    "    else:\n",
+    "        progress_rates = []\n",
+    "        #check for multiple reactions\n",
+    "        if(type(v1[0]) == list):\n",
+    "            for v in v1:\n",
+    "                for reactant in v:\n",
+    "                    if(type(reactant) != int and type(reactant) != float):\n",
+    "                        raise TypeError(\"All elements in v1 must be numbers!\")\n",
+    "            #Calculate the progress rate of each reaction\n",
+    "            reactions = len(v1[0])\n",
+    "            for j in range(reactions):\n",
+    "                if (type(k)== list):\n",
+    "                    if (any(type(i) != int and type(i) != float for i in k)):\n",
+    "                        raise TypeError(\"All elements in k must be numbers!\")\n",
+    "                    progress_rate = k[j]\n",
+    "                else:\n",
+    "                    progress_rate = k\n",
+    "                for i in range(len(v1)):\n",
+    "                    progress_rate = progress_rate*(x[i]**v1[i][j])\n",
+    "                progress_rates.append(progress_rate) \n",
+    "        else:\n",
+    "            #Check types of V1\n",
+    "            if (any(type(i) != int and type(i) != float  for i in v1)):\n",
+    "                raise TypeError(\"All elements in v1 must be numbers!\")\n",
+    "            #Calculate the progress rate of each reaction\n",
+    "            progress_rate = k\n",
+    "            for i in range(len(v1)):\n",
+    "                progress_rate = progress_rate*(x[i]**v1[i])\n",
+    "            progress_rates.append(progress_rate)\n",
+    "        return progress_rates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20.0]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "progress_rate([2.0,1.0,0.0],[1.0,2.0,3.0],10)"
    ]
   },
   {
@@ -330,6 +528,26 @@
     "\\end{align}\n",
     "\n",
     "You must document your function and write some tests in addition to the one suggested.  You choose the additional tests, but you must have at least one doctest in addition to a suite of unit tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[40.0, 10.0]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "progress_rate([[1.0,2.0],[2.0,0.0],[0.0,2.0]],[1.0,2.0,1.0],10)"
    ]
   },
   {
@@ -384,6 +602,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reaction_rate(v1,v2,x,k):\n",
+    "    w = progress_rate(v1,x,k)\n",
+    "    #Check that x,v2 and v1 are lists\n",
+    "    if (type(v2) != list or type(x) != list or type(v1)!= list):\n",
+    "        raise TypeError(\"v' & x must be passed in as a list\")\n",
+    "    if (any(type(i) != int and type(i) != float for i in x)):\n",
+    "        raise TypeError(\"All arguments must be numbers!\")\n",
+    "    elif (type(k) != int and type(k) != float and type(k) !=list):\n",
+    "        raise TypeError(\"All arguments must be numbers!\")\n",
+    "    else:\n",
+    "        reaction_rates = []\n",
+    "        for i in (range(len(v2))):\n",
+    "            reaction_rate = 0\n",
+    "            for j in (range(len(v2[0]))):\n",
+    "                reaction_rate = reaction_rate + (v2[i][j]-v1[i][j])*w[j]\n",
+    "            reaction_rates.append(reaction_rate)\n",
+    "        return reaction_rates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-30.0, -60.0, 20.0]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reaction_rate([[1.0,0.0],[2.0,0.0],[0.0,2.0]],[[0.0,1.0],[0.0,2.0],[1.0,0.0]],[1.0,2.0,1.0],10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -421,6 +684,118 @@
     "\\end{align}\n",
     "\n",
     "You may assume that these are elementary reactions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing blah.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file chemkin.py\n",
+    "\n",
+    "def progress_rate(v1,x,k):\n",
+    "    #Check that x and v1 are lists\n",
+    "    if (type(v1) != list or type(x) != list):\n",
+    "        raise TypeError(\"v' & x must be passed in as a list\")\n",
+    "    #Check that x,and k are numbers/list of numbers\n",
+    "    if (any(type(i) != int and type(i) != float for i in x)):\n",
+    "        raise TypeError(\"All elements in x must be numbers!\")\n",
+    "    elif (type(k) != int and type(k) != float and type(k) != list):\n",
+    "        raise TypeError(\"k must be a numbers or list!\")\n",
+    "    else:\n",
+    "        progress_rates = []\n",
+    "        #check for multiple reactions\n",
+    "        if(type(v1[0]) == list):\n",
+    "            for v in v1:\n",
+    "                for reactant in v:\n",
+    "                    if(type(reactant) != int and type(reactant) != float):\n",
+    "                        raise TypeError(\"All elements in v1 must be numbers!\")\n",
+    "            #Calculate the progress rate of each reaction\n",
+    "            reactions = len(v1[0])\n",
+    "            for j in range(reactions):\n",
+    "                if (type(k) == list):\n",
+    "                    progress_rate = k[j]\n",
+    "                else:\n",
+    "                    progress_rate = k\n",
+    "                for i in range(len(v1)):\n",
+    "                    progress_rate = progress_rate*(x[i]**v1[i][j])\n",
+    "                progress_rates.append(progress_rate) \n",
+    "        else:\n",
+    "            #Check types of V1\n",
+    "            if (any(type(i) != int and type(i) != float  for i in v1)):\n",
+    "                raise TypeError(\"All elements in v1 must be numbers!\")\n",
+    "            #Calculate the progress rate of each reaction\n",
+    "            progress_rate = k\n",
+    "            for i in range(len(v1)):\n",
+    "                progress_rate = progress_rate*(x[i]**v1[i])\n",
+    "            progress_rates.append(progress_rate)\n",
+    "        return progress_rates\n",
+    "    \n",
+    "def reaction_rate(v1,v2,x,k):\n",
+    "    w = progress_rate(v1,x,k)\n",
+    "    #Check that x,v2 and v1 are lists\n",
+    "    if (type(v2) != list or type(x) != list or type(v1)!= list):\n",
+    "        raise TypeError(\"v' & x must be passed in as a list\")\n",
+    "    if (any(type(i) != int and type(i) != float for i in x)):\n",
+    "        raise TypeError(\"All arguments must be numbers!\")\n",
+    "    elif (type(k) != int and type(k) != float and type(k) !=list):\n",
+    "        raise TypeError(\"All arguments must be numbers!\")\n",
+    "    else:\n",
+    "        reaction_rates = []\n",
+    "        for i in (range(len(v2))):\n",
+    "            reaction_rate = 0\n",
+    "            for j in (range(len(v2[0]))):\n",
+    "                reaction_rate = reaction_rate + (v2[i][j]-v1[i][j])*w[j]\n",
+    "            reaction_rates.append(reaction_rate)\n",
+    "        return reaction_rates\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-360707.78728040616, -20470380.895447683, 20831088.682728089, 20109673.108167276, -20109673.108167276], [-180426142.59632477, -242230452.35289708, 422656594.94922185, 61804309.756572314, -61804309.756572314], [-180426142.59632477, -242230452.35289708, 422656594.94922185, 61804309.756572314, -61804309.756572314]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import chemkin\n",
+    "import reaction_coeffs\n",
+    "\n",
+    "v1 = [[2.0,0.0,0.0],[1.0,0.0,1.0],[0.0,1.0,0.0],[0.0,1.0,0.0],[0.0,0.0,1.0]]\n",
+    "v2 = [[1.0,0.0,0.0],[0.0,1.0,0.0],[2.0,0.0,1.0],[0.0,0.0,1.0],[0.0,1.0,0.0]]\n",
+    "x = [2.0,1.0,0.5,1.0,1.0]\n",
+    "\n",
+    "k1T1 = reaction_coeffs.mod_arr((10**7),(5*(10**4)),0.5,750)\n",
+    "k2T1 = reaction_coeffs.const(10**4)\n",
+    "k3T1 = reaction_coeffs.arr((10**8),(10**4),750)\n",
+    "k1 = [k1T1,k2T1,k3T1]\n",
+    "\n",
+    "k2T2 = reaction_coeffs.const(10**4)\n",
+    "k3T2 = reaction_coeffs.arr((10**8),(10**4),1500)\n",
+    "k1T2 = reaction_coeffs.mod_arr((10**7),(5*(10**4)),0.5,1500)\n",
+    "k2 = [k1T2,k2T2,k3T2]\n",
+    "\n",
+    "k2T3 = reaction_coeffs.const(10**4)\n",
+    "k3T3 = reaction_coeffs.arr((10**8),(10**4),2500)\n",
+    "k1T3 = reaction_coeffs.mod_arr((10**7),(5*(10**4)),0.5,2500)\n",
+    "k3 = [k1T3,k2T3,k3T3]\n",
+    "\n",
+    "print([chemkin.reaction_rate(v1,v2,x,k1),chemkin.reaction_rate(v1,v2,x,k3), chemkin.reaction_rate(v1,v2,x,k3)])"
    ]
   },
   {
