--- a/homeworks/HW5/HW5-Final.ipynb
+++ b/homeworks/HW5/HW5-Final.ipynb
@@ -440,8 +440,6 @@
     "            reactions = len(v1[0])\n",
     "            for j in range(reactions):\n",
     "                if (type(k)== list):\n",
-    "                    if (any(type(i) != int and type(i) != float for i in k)):\n",
-    "                        raise TypeError(\"All elements in k must be numbers!\")\n",
     "                    progress_rate = k[j]\n",
     "                else:\n",
     "                    progress_rate = k\n",
@@ -688,14 +686,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing blah.py\n"
+      "Writing chemkin.py\n"
      ]
     }
    ],
@@ -761,14 +759,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-360707.78728040616, -20470380.895447683, 20831088.682728089, 20109673.108167276, -20109673.108167276], [-180426142.59632477, -242230452.35289708, 422656594.94922185, 61804309.756572314, -61804309.756572314], [-180426142.59632477, -242230452.35289708, 422656594.94922185, 61804309.756572314, -61804309.756572314]]\n"
+      "[[-360707.78728040616, -20470380.895447683, 20831088.682728089, 20109673.108167276, -20109673.108167276], [-281117620.76487017, -285597559.23804539, 566715180.0029155, 4479938.4731752202, -4479938.4731752202], [-1804261425.9632478, -1810437356.938905, 3614698782.902153, 6175930.9756572321, -6175930.9756572321]]\n"
      ]
     }
    ],
@@ -786,16 +784,16 @@
     "k1 = [k1T1,k2T1,k3T1]\n",
     "\n",
     "k2T2 = reaction_coeffs.const(10**4)\n",
-    "k3T2 = reaction_coeffs.arr((10**8),(10**4),1500)\n",
-    "k1T2 = reaction_coeffs.mod_arr((10**7),(5*(10**4)),0.5,1500)\n",
+    "k3T2 = reaction_coeffs.arr((10**7),(10**4),1500)\n",
+    "k1T2 = reaction_coeffs.mod_arr((10**8),(5*(10**4)),0.5,1500)\n",
     "k2 = [k1T2,k2T2,k3T2]\n",
     "\n",
     "k2T3 = reaction_coeffs.const(10**4)\n",
-    "k3T3 = reaction_coeffs.arr((10**8),(10**4),2500)\n",
-    "k1T3 = reaction_coeffs.mod_arr((10**7),(5*(10**4)),0.5,2500)\n",
+    "k3T3 = reaction_coeffs.arr((10**7),(10**4),2500)\n",
+    "k1T3 = reaction_coeffs.mod_arr((10**8),(5*(10**4)),0.5,2500)\n",
     "k3 = [k1T3,k2T3,k3T3]\n",
     "\n",
-    "print([chemkin.reaction_rate(v1,v2,x,k1),chemkin.reaction_rate(v1,v2,x,k3), chemkin.reaction_rate(v1,v2,x,k3)])"
+    "print([chemkin.reaction_rate(v1,v2,x,k1),chemkin.reaction_rate(v1,v2,x,k2), chemkin.reaction_rate(v1,v2,x,k3)])"
    ]
   },
   {
@@ -808,6 +806,15 @@
     "\n",
     "Within the `cs207-FinalProject` repo, you must set up Travis CI and Coveralls.  Make sure your `README.md` file includes badges indicating how many tests are passing and the coverage of your code."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
